--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,12 @@ body {
     z-index: 9999;
     padding: 25px;
     box-sizing: border-box;
-    transition: all 500ms;
+    transition: right 500ms;
+}
+
+#support-wrapper h2 {
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 #support-wrapper .support-btn {
