--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,6 +27,8 @@
         //Braucht content damit es vom HTML wahrgenommen wird
         content: "";
         display: block;
+        
+        // Sicherstellen dass das Blockelement keinen Platz einnimmt
         height: 0;
         line-height: 0;
         visibility: hidden;
