--- a/less/variables.less
+++ b/less/variables.less
@@ -10,6 +10,7 @@
 @mainWhite: #FFF;
 @interactionColor: #e74c3c;
 @interactionColorActive: #fff;
+@secondaryColor:#2980b9;
 
 //TODO: Austauschen der schriftgörßen durch variable
 @bigFontSize: 4.0rem;
