--- a/less/globals.less
+++ b/less/globals.less
@@ -58,7 +58,7 @@ body {
     // &: refers to this class
     &:hover {
         background-color: #fff;
-        color: #ccc;
+        color: @interactionColor;
     }
 }
 
@@ -75,7 +75,6 @@ body {
 //.clearfix {
 //    clear: both;
 //}
-
 .main-container {
     position: relative;
     top: 100%;
