--- a/css/style.css
+++ b/css/style.css
@@ -340,3 +340,145 @@ body {
 /*----------------------
         Media
 ----------------------*/
+/*----------------------
+        Effects
+----------------------*/
+.container {
+  margin-left: 30%;
+  margin-top: 100px;
+  padding: 25px;
+  text-align: center;
+  width: 500px;
+  background-color: #f00;
+  transition: all 250ms;
+  transform-origin: top left;
+}
+.container img {
+  width: 50%;
+}
+#rotate {
+  transform: rotate(0deg);
+}
+#rotate:hover {
+  transform: rotate(22.5deg);
+}
+#scale {
+  transform: scale(1);
+}
+#scale:hover {
+  transform: scale(1.5);
+}
+#skew {
+  transform: skew(1);
+}
+#skew:hover {
+  transform: skew(45deg, 10deg);
+}
+#translate {
+  transform: translate(0);
+}
+#translate:hover {
+  transform: translate(300px, 10%);
+}
+#filter-blur {
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+}
+#filter-blur:hover {
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+}
+#filter-grayscale {
+  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+}
+#filter-grayscale:hover {
+  filter: grayscale(0);
+  -webkit-filter: grayscale(0);
+}
+#filter-saturate {
+  filter: saturate(1);
+  -webkit-filter: saturate(1);
+}
+#filter-saturate:hover {
+  filter: saturate(2);
+  -webkit-filter: saturate(2);
+}
+#filter-dropshadow {
+  border: 5px dashed #000;
+  filter: drop-shadow(15px 15px 15px #000000);
+  -webkit-filter: drop-shadow(5px 5px 5px #000000);
+  background-color: transparent;
+}
+#animation-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+#ball {
+  position: absolute;
+  top: 50px;
+  left: 150px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #00f;
+  overflow: visible;
+  z-index: 9999;
+  animation: bounce 1s 10 alternate ease-in;
+}
+#ball-shadow {
+  position: absolute;
+  top: 250px;
+  left: 150px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #000;
+  transform: scale(1, 0.25);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  animation: shadow 1s 10 alternate ease-in;
+}
+@keyframes bounce {
+  0% {
+    top: 20px;
+  }
+  90% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0.8);
+    top: 200px;
+  }
+}
+@keyframes shadow {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    transform: scaleX(0.25);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleX(0.5);
+  }
+}
+#preloader {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 91px;
+  width: 91px;
+  background: url(../img/sprite_preloader.png) left top no-repeat;
+  animation: preloader 1s steps(14) infinite;
+}
+@keyframes preloader {
+  from {
+    background-position: left top;
+  }
+  to {
+    background-position: right top;
+  }
+}
