--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
 .download-btn {
   display: inline-block;
   width: 300px;
+  max-width: 100%;
   height: 50px;
   line-height: 50px;
   background-color: #e74c3c;
@@ -247,7 +248,7 @@ body {
   font-size: 1rem;
   line-height: 1.4em;
   padding: 25px;
-  height: 100px;
+  min-height: 100px;
 }
 #pricing-wrapper .content article p:last-child {
   height: auto;
@@ -340,6 +341,29 @@ body {
 /*----------------------
         Media
 ----------------------*/
+@media (max-width: 780px) {
+  .content {
+    padding: 100px 25px;
+  }
+  #start-wrapper .content {
+    padding: 100px 50px;
+  }
+}
+@media (max-width: 600px) {
+  #info-wrapper .content p {
+    width: auto;
+  }
+  #pricing-wrapper .content article {
+    float: none;
+    width: auto;
+    max-width: 400px;
+    margin: 0 auto 100px auto;
+  }
+  #pricing-wrapper .content article:last-child {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
+}
 /*----------------------
         Effects
 ----------------------*/
