--- a/less/content.less
+++ b/less/content.less
@@ -167,7 +167,7 @@
                 font-size: @smallFontSize;
                 line-height: @lineHeight;
                 padding: 25px;
-                height: 100px;
+                min-height: 100px;
                 &:last-child {
                     height: auto;
                     font-size: @mediumFontSize + 1;
