--- a/less/globals.less
+++ b/less/globals.less
@@ -41,6 +41,7 @@ body {
 .download-btn {
     display: inline-block;
     width: 300px;
+    max-width: 100%;
     height: 50px;
     line-height: 50px;
     background-color: @interactionColor;
